CB-8789 Configure DB TLS for DL cluster services & DH HMS
* Persist DB SSL status in RDSConfig
  * Currently populated for external DBs only
* Return DB SSL status in RDSDetails
* Additions to RdsView:
  * DB SSL status
  * SSL certificate file path; empty when not using SSL
  * ConnectionURL extended wit SSL options as necessary
* Add new compile dependency to
  template-manager-cmtemplate/build.gradle:
  org.apache.commons:commons-text:1.5
* Inject DB SSL configs for HMS and Ranger Admin
* Honor custom HMS DB settings in cluster template
* Add new unit tests and migrate existing ones to JUnit 5 & AssertJ